--- a/molly/maps/templates/maps/embed.html
+++ b/molly/maps/templates/maps/embed.html
@@ -1,6 +1,6 @@
 {% load molly_utils %}
 {% ifnotequal style_group "dumb" %}
-    {% if device|device_has_parent:"generic_web_browser" or device.pointing_method == "touchscreen" and use_javascript and device.device_os != "Symbian" and device.device_os != "Symbian OS" %}
+    {% if use_slippy_maps %}
         <div class="slippy-map map">
             <div style="height: {{ map.height }}px;" id="map-{{ map.static_map_hash }}">
                 <script type="text/javascript">
