--- a/molly/auth/templates/auth/secure.html
+++ b/molly/auth/templates/auth/secure.html
@@ -2,15 +2,11 @@
 
 {% block bottom_links %}
 
-  <div style="width:100%; float:left; margin-top: 2px; margin-bottom:2px;">
-    <div class="center" style="line-height:1.8em; margin:0 10px 0 10px; background-color:#ffffbf; padding:10px; -webkit-border-radius:6px; -moz-border-radius:6px; display:block;"
-       href="{% url feature_vote:index %}">
-      <div style="background-image:url('{{ STATIC_URL }}auth/images/padlock.png'); background-repeat:no-repeat; background-position:left center; padding-left:28px"> 
-  <a style="padding:5px 1px;" href="{% url auth:index %}">{% trans "Security preferences" %}</a>
-  <a style="padding:5px 1px;" href="{% url auth:clear-session %}?return_url={{ full_path }}" rel="nofollow">{% trans "Clear secure session" %}</a><br/>
-  {% blocktrans with user|externalservicetoken_count as number_services count user.usersession_set.all.count as number_devices %}{{ number_services }} accessible from {{ number_devices }} device.{% plural %}{{ number_services }} accessible from {{ number_devices }} devices.{% endblocktrans %}
-  <a style="padding:5px 1px;" href="{% url auth:index %}">{% trans "Change" %}</a>
-  </div></div>
+  <div class="secure-link-block">
+    <a href="{% url auth:index %}">{% trans "Security preferences" %}</a>
+    <a href="{% url auth:clear-session %}?return_url={{ full_path }}" rel="nofollow">{% trans "Clear secure session" %}</a><br/>
+    {% blocktrans with user|externalservicetoken_count as number_services count user.usersession_set.all.count as number_devices %}{{ number_services }} accessible from {{ number_devices }} device.{% plural %}{{ number_services }} accessible from {{ number_devices }} devices.{% endblocktrans %}
+    <a href="{% url auth:index %}">{% trans "Change" %}</a>
   </div>
   {{ block.super }}
 {% endblock %}
