--- a/molly/apps/feedback/templates/feedback/index.html
+++ b/molly/apps/feedback/templates/feedback/index.html
@@ -3,16 +3,16 @@
 {% block content %}
 
 {% if sent %}
-	<div class="section">
-	  <h2>{% trans "Thank you for your feedback!" %}</h2>
-	  <div class="note"><div class="bubble pad-10">
-	{% if referer %}
-	  <p><a href="{{ referer }}">{% trans "You may wish to go back." %}</a></p>
-	{% else %}
-	  <p><a href="{% url home:index %}">{% trans "You may wish to go back to the home page." %}</a></p>
-	{% endif %}
+    <div class="section">
+	<h2>{% trans "Thank you for your feedback!" %}</h2>
+	<div class="note"><div class="bubble pad-10">
+            {% if feedback_referrer %}
+              <p><a href="{{ feedback_referrer }}">{% trans "You may wish to go back." %}</a></p>
+            {% else %}
+              <p><a href="{% url home:index %}">{% trans "You may wish to go back to the home page." %}</a></p>
+            {% endif %}
 	</div></div>
-	</div>
+    </div>
 {% endif %}
 
 {% if not sent %}
@@ -23,20 +23,22 @@
 </style>
 
 <form method="post" action=".">
-  {% csrf_token %}
-<input type="hidden" name="referer" value="{{ referer }}"/>
+    {% csrf_token %}
+    <input type="hidden" name="referer" value="{{ feedback_referrer }}"/>
 
-<div class="section">
-	<div class="form">
-	<h3>{{ feedback_form.email.label}}</h3>
-	{% if feedback_form.email.errors %}
-	    <p>{{ feedback_form.email.errors.0 }}</p>
-	{% endif %}  <p>{{ feedback_form.email }}</p>
-	<h3>{{ feedback_form.body.label}}</h3>
-	<p>{{ feedback_form.body }}</p>
-	<p><input type="submit" value='{% trans "Submit" %}' /></p>
-	</div>
-</div>
+    <div class="section">
+        <div class="form">
+            <h3>{{ feedback_form.email.label}}</h3>
+            {% if feedback_form.email.errors %}
+                <p>{{ feedback_form.email.errors.0 }}</p>
+            {% endif %}
+            <p>{{ feedback_form.email }}</p>
+
+            <h3>{{ feedback_form.body.label}}</h3>
+            <p>{{ feedback_form.body }}</p>
+            <p><input type="submit" value='{% trans "Submit" %}' /></p>
+        </div>
+    </div>
 </form>
 {% endif %}
 
