--- a/molly/templates/base.html
+++ b/molly/templates/base.html
@@ -157,46 +157,49 @@
         {% block bottom_links %}
             {# Give all non-feature phones a stylised bunch of links #}
             {% ifnotequal style_group "dumb" %}
+                
                 {# As older Blackberry (RIM) devices have poor browsers we reduce button width and float each side #}
-                {% if device.brand_name == "RIM" %}
-                  <div id="rim-left">
-                    <a href="{% url feedback:index %}?referer={{ full_path|urlencode }}">{% trans "Feedback" %}</a>
+                  <div class="{% if device.brand_name == "RIM" %}rim-left{% else %}half-width{% endif %}">
+                    
+                    {# This stops links to feedback on the feedback page - causes an infinite loop! #}
+                    <a href="{% url feedback:index %}?referer={% if feedback_referrer %}{{ feedback_referrer|urlencode }}{% else %}{{ full_path|urlencode }}{% endif %}">{% trans "Feedback" %}</a>
                   </div>
-                  <div id="rim-right">
-                    <a href="{% url url_shortener:index %}?path={{ full_path|urlencode }}">{% trans "Share" %}</a>
+                  <div class="{% if device.brand_name == "RIM" %}rim-right{% else %}half-width{% endif %}">
+                    <a href="{% url url_shortener:index %}?path={% if share_path %}{{ share_path|urlencode }}{% else %}{{ full_path|urlencode }}{% endif %}">{% trans "Share" %}</a>
                   </div>
-                {# All other devices #}
-                {% else %}
-                  <div class="half-width"><a href="{% url feedback:index %}?referer={{ full_path|urlencode }}">{% trans "Feedback" %}</a></div>
-                  <div class="half-width"><a href="{% url url_shortener:index %}?path={{ full_path|urlencode }}">{% trans "Share" %}</a></div>
-                {% endif %}
                 
                 {% if "feature_vote"|app_is_loaded or "feature-suggestions"|app_is_loaded %}
                   <div class="{% if LANGUAGES|length != 2 %}full-width{% else %}half-width{% endif %}">
                     <a href="{% url feature_vote:index %}">{% trans "Suggest a feature" %}</a></div>
                 {% endif %}
+                
                 {# If there are only two languages to switch between, show the switch here #}
                 {% if LANGUAGES|length == 2 %}
                     <div class="half-width">
                     {% for language_code, language_name in LANGUAGES %}
-                    {% if language_code != LANGUAGE_CODE %}
-                    <form action="{% url set-language %}" method="post" class="has-ajax-handler">
-			<input type="hidden" name="next" value="{{ full_path|urlencode }}" />
-                        {% csrf_token %}<a>
-                        <button type="submit" name="language" value="{{ language_code }}">
-                        {{ language_name }}
-                        </button></a>
-                    </form>
-                    {% endif %}
+                        {% if language_code != LANGUAGE_CODE %}
+                            <form action="{% url set-language %}" method="post" class="has-ajax-handler">
+                                <input type="hidden" name="next" value="{{ full_path|urlencode }}" />
+                                {% csrf_token %}<a>
+                                <button type="submit" name="language" value="{{ language_code }}">
+                                {{ language_name }}
+                                </button></a>
+                            </form>
+                        {% endif %}
                     {% endfor %}
                     </div>
                 {% endif %}
                 <div class="clear"> </div>
+            
             {# Give a simple list for feature phones #}
             {% else %}
                 <ul>
-                    <li><a href="{% url feedback:index %}?referer={{ full_path|urlencode }}">{% trans "Feedback" %}</a></li>
-                    <li><a href="{% url url_shortener:index %}?path={{ full_path|urlencode }}">{% trans "Share" %}</a></li>
+                    <li>
+                        <a href="{% url feedback:index %}?referer={% if feedback_referrer %}{{ feedback_referrer|urlencode }}{% else %}{{ full_path|urlencode }}{% endif %}">{% trans "Feedback" %}</a>
+                    </li>
+                    <li>
+                        <a href="{% url url_shortener:index %}?path={% if share_path %}{{ share_path|urlencode }}{% else %}{{ full_path|urlencode }}{% endif %}">{% trans "Share" %}</a>
+                    </li>
                     {% if "feature_vote"|app_is_loaded or "feature-suggestions"|app_is_loaded %}
                         <li><a href="{% url feature_vote:index %}">{% trans "Suggest a feature" %}</a></li>
                     {% endif %}
