--- a/molly/apps/podcasts/templates/podcasts/podcast.html
+++ b/molly/apps/podcasts/templates/podcasts/podcast.html
@@ -5,10 +5,10 @@
         <div class="center podcast-image">
           {% if podcast.logo %}
           {% with device|device_has_parent:"apple_iphone_ver4"|yesno:"120,60" as max_width %}
-          <img class="no-border" src="{% external_image podcast.logo max_width %}" width="60" height="60" alt="" />
+          <img src="{% external_image podcast.logo max_width %}" width="60" height="60" alt="" />
           {% endwith %}
           {% endif %}
-          <img class="no-border" src="{{ STATIC_URL }}site/images/icons/list-{{ podcast.medium }}.png" alt="({{ podcast.medium }})">
+          <img src="{{ STATIC_URL }}site/images/icons/list-{{ podcast.medium }}.png" alt="({{ podcast.medium }})">
         </div>
         <div class="podcast-title">
         {{ podcast.title }}
