--- a/molly/apps/places/static/places/css/smart.css
+++ b/molly/apps/places/static/places/css/smart.css
@@ -28,23 +28,25 @@ td.service-id a {
 
 /* Directions list */
 
-ul.directions-list li {
+ol.directions-list li {
     font-size: 1.2em;
     font-weight: bold;
     padding-left: 40px;
+    list-style-type: decimal;
+    list-style-position: inside;
 }
 
-ul.directions-list li .additional {
+ol.directions-list li .additional {
     font-size: 0.8em;
     font-weight: normal;
 }
 
-ul.directions-list li.direction-start {}
-ul.directions-list li.direction-left {}
-ul.directions-list li.direction-slight-left {}
-ul.directions-list li.direction-sharp-left {}
-ul.directions-list li.direction-right {}
-ul.directions-list li.direction-slight-right {}
-ul.directions-list li.direction-sharp-right {}
-ul.directions-list li.direction-turn-around {}
-ul.directions-list li.direction-straight {}
+ol.directions-list li.direction-start {}
+ol.directions-list li.direction-left {}
+ol.directions-list li.direction-slight-left {}
+ol.directions-list li.direction-sharp-left {}
+ol.directions-list li.direction-right {}
+ol.directions-list li.direction-slight-right {}
+ol.directions-list li.direction-sharp-right {}
+ol.directions-list li.direction-turn-around {}
+ol.directions-list li.direction-straight {}
