Add remove links to create tour page

--- a/molly/apps/tours/templates/tours/create_desktop.html
+++ b/molly/apps/tours/templates/tours/create_desktop.html
@@ -10,7 +10,7 @@
     <p>{% blocktrans %}Some instructions on how to create a tour here{% endblocktrans %}</p>
     
     {% if tour %}
-        <p>Your tour has been created.</p>
+        <p>{% trans 'Your tour has been created.' %}</p>
     {% endif %}
     
     <div id="current-tour">
@@ -20,11 +20,12 @@
         {% endif %}
         <ol id="poi-list">
             {% for entity in entities %}
-                {# Todo: Add remove link #}
-                <li>{{ entity.title }}</li>
+                <li><a href="{% url tours:create %}{% for e in entities %}{% if e != entity %}{{ e.identifier_scheme }}:{{ e.identifier_value }}/{% endif %}{% endfor %}">
+                    {{ entity.title }}
+                </a></li>
             {% endfor %}
         </ol>
-        <form action="{{ full_path }}save/">
+        <form action="{% url tours:create %}{% for e in entities %}{{ e.identifier_scheme }}:{{ e.identifier_value }}/{% endfor %}save/">
             <input type="submit" value="{% trans 'Save' %}" />
         </form>
     </div>
@@ -35,7 +36,7 @@
             <p>{% trans 'Your tour takes you near the following places, click on them to add them to your route:' %}</p>
             <ul>
                 {% for entity in suggestions %}
-                    <li><a href="{{ full_path }}{{ entity.identifier_scheme }}:{{ entity.identifier_value }}/">{{ entity.title }}</a></li>
+                    <li><a href="{% url tours:create %}{% for e in entities %}{{ e.identifier_scheme }}:{{ e.identifier_value }}/{% endfor %}{{ entity.identifier_scheme }}:{{ entity.identifier_value }}/save/">{{ entity.title }}</a></li>
                 {% endfor %}
             </ul>
         </div>
@@ -46,7 +47,7 @@
             <h2>{{ entity_type.verbose_name_plural|capfirst }}</h2>
             <ul>
                 {% for entity in entities %}
-                    <li><a href="{{ full_path }}{{ entity.identifier_scheme }}:{{ entity.identifier_value }}/">{{ entity.title }}</a></li>
+                    <li><a href="{% url tours:create %}{% for e in entities %}{{ e.identifier_scheme }}:{{ e.identifier_value }}/{% endfor %}{{ entity.identifier_scheme }}:{{ entity.identifier_value }}/">{{ entity.title }}</a></li>
                 {% endfor %}
             </ul>
         </div>
