--- a/molly/apps/tours/templates/tours/create.html
+++ b/molly/apps/tours/templates/tours/create.html
@@ -7,11 +7,14 @@
     </div>
     <ul class="content-list">
         {% for entity in entities %}
-            {# todo: add delete #}
-            <li>{{ entity.title }}</li>
+            <li><a href="{% url tours:create %}{% for e in entities %}{% if e != entity %}{{ e.identifier_scheme }}:{{ e.identifier_value }}{% endif %}{% endfor %}">
+                {{ entity.title }}
+            </a></li>
         {% endfor %}
     </ul>
-    {# todo: add save #}
+    <form action="{% url tours:create %}{% for e in entities %}{{ e.identifier_scheme }}:{{ e.identifier_value }}/{% endfor %}save/">
+        <input type="submit" value="{% trans 'Save' %}" />
+    </form>
 </div>
 
 <div class="section">
