--- a/molly/apps/places/templates/places/entity_directions.html
+++ b/molly/apps/places/templates/places/entity_directions.html
@@ -1,11 +1,11 @@
-{% extends "places/base.html" %}{% load molly_maps %}{% load molly_utils %}
+{% extends "places/base.html" %}{% load molly_maps %}{% load molly_utils %}{% load i18n %}
 
 {% block content %}
 
 <div class="section">
     <div class="header">
-        <h2>Directions to {{ entity.title }} (by {{ type }})</h2>
-	Show directions for: 
+        <h2>{% blocktrans with entity.title as entity and type as type %}Directions to {{ entity }} (by {{ type }}){% endblocktrans %}</h2>
+	{% trans 'Show directions for: ' %}
         {% for type in allowed_types %}
 	    {% comment %} the non-breaking space is to combat a bug in slimmer,
 	                  where it is over zealous in removing the spaces
@@ -17,14 +17,13 @@
     {% if entity.location %}
         {% if route.error %}
         <div class="note"><div class="bubble"><div class="pad-10">
-           An error occurred plotting this route: {{ route.error }}.
+           {% trans 'An error occurred plotting this route:' %} {{ route.error }}.
         </div></div></div>
         {% else %}
             <div class="section-content no-round-bottom">
                 {% render_map map %}
 		<div class="note"><div class="bubble"><div class="pad-10">
-		   This route will take {{ route.total_time|humanise_seconds }}
-		   and cover {{ route.total_distance|humanise_distance }}.
+                    {% blocktrans with route.total_time|humanise_seconds as time and route.total_distance|humanise_distance as distance %}This route will take {{ time }} and cover {{ distance }}.{% endblocktrans %}
 		</div></div></div>
             </div>
             <ol class="directions-list">
@@ -38,14 +37,13 @@
         {% endif %}
     {% else %}
         <div class="note"><div class="bubble">
-            We do not yet have a location for this {{ entity.entity_type.verbose_name }}.
+            {% blocktrans with entity.primary_type.verbose_name as type_name %}We do not yet have a location for this {{ type_name }}.{% endblocktrans %}
         </div></div>
     {% endif %}
 </div>
 
 <div class="note"><div class="bubble"><div class="pad-10">
-   Please note that the route information provided should be
-   followed at your own risk.
+   {% trans 'Please note that the route information provided should be followed at your own risk.' %}
 </div></div></div>
 
 {% endblock %}
