--- a/molly/apps/tours/templates/tours/create.html
+++ b/molly/apps/tours/templates/tours/create.html
@@ -1,13 +1,37 @@
-{% extends "tours/base.html" %}
+{% extends "tours/base.html" %}{% load i18n %}
 
 {% block content %}
+
+{% if tour %}
+    <ul class="link-list stand-alone">
+        <li><a href="{{ tour.get_absolute_url }}">{% trans 'Go to your created tour' %}</a></li>
+    </ul>
+{% endif %}
+
+{% if suggestions %}
+    <div class="section">
+        <div class="header">
+            <h2>{% trans "Suggestions" %}</h2>
+            <p>{% trans 'Your tour takes you near the following places, click on them to add them to your route:' %}</p>
+        </div>
+        <ul class="link-list">
+            {% for entity in suggestions %}
+                <li><a href="{% url tours:create %}{% for e in entities %}{{ e.identifier_scheme }}:{{ e.identifier_value }}/{% endfor %}{{ entity.identifier_scheme }}:{{ entity.identifier_value }}/save/">{{ entity.title }}</a></li>
+            {% endfor %}
+        </ul>
+    </div>
+{% endif %}
+
 <div class="section">
     <div class="header">
-        <h2>Current Stops</h2>
+        <h2>{% trans 'Current Stops' %}</h2>
+        {% if optimised_entities %}
+            <p>{% trans 'Your route order has been optimised to minimise travelling distance - the order may have changed.' %}</p>
+        {% endif %}
     </div>
     <ul class="content-list">
         {% for entity in entities %}
-            <li><a href="{% url tours:create %}{% for e in entities %}{% if e != entity %}{{ e.identifier_scheme }}:{{ e.identifier_value }}{% endif %}{% endfor %}">
+            <li><a href="{% url tours:create %}{% for e in entities %}{% if e != entity %}{{ e.identifier_scheme }}:{{ e.identifier_value }}/{% endif %}{% endfor %}">
                 {{ entity.title }}
             </a></li>
         {% endfor %}
@@ -21,13 +45,13 @@
     <div class="header">
         <h2>Add new stop</h2>
     </div>
-    {% for entity_type, entities in attractions.items %}
+    {% for entity_type, attraction_entities in attractions.items %}
         <div class="header">
             <h2>{{ entity_type.verbose_name_plural|capfirst }}</h2>
         </div>
         <ul class="link-list{% if not forloop.last %} no-round-bottom{% endif %}">
-            {% for entity in entities %}
-                <li><a href="{{ full_path }}{{ entity.identifier_scheme }}:{{ entity.identifier_value }}/">{{ entity.title }}</a></li>
+            {% for entity in attraction_entities %}
+                <li><a href="{% url tours:create %}{% for e in entities %}{{ e.identifier_scheme }}:{{ e.identifier_value }}/{% endfor %}{{ entity.identifier_scheme }}:{{ entity.identifier_value }}/">{{ entity.title }}</a></li>
             {% endfor %}
         </ul>
     {% endfor %}
