--- a/molly/apps/places/static/places/css/smart.css
+++ b/molly/apps/places/static/places/css/smart.css
@@ -43,7 +43,7 @@ ol.directions-list li .additional {
     font-weight: normal;
 }
 
-ol.directions-list li.direction-start {}
+ol.directions-list li.direction-start { background-image: url('../../places/images/start.png'); }
 ol.directions-list li.direction-left { background-image: url('../../places/images/turn-left.png'); }
 ol.directions-list li.direction-slight-left { background-image: url('../../places/images/bear-left.png'); }
 ol.directions-list li.direction-sharp-left { background-image: url('../../places/images/sharp-left.png'); }
