--- a/molly/apps/tours/templates/tours/tour.html
+++ b/molly/apps/tours/templates/tours/tour.html
@@ -31,9 +31,9 @@
             </div>
             <div class="section-content no-round-bottom">
                 {% render_map route_map %}
-		<div class="note"><div class="bubble"><div class="pad-10">
-                    {% blocktrans with route.total_time|humanise_seconds as time and route.total_distance|humanise_distance as distance %}This route will take {{ time }} and cover {{ distance }}.{% endblocktrans %}
-		</div></div></div>
+                <div class="note"><div class="bubble"><div class="pad-10">
+                            {% blocktrans with route.total_time|humanise_seconds as time and route.total_distance|humanise_distance as distance %}This route will take {{ time }} and cover {{ distance }}.{% endblocktrans %}
+                </div></div></div>
             </div>
             <ol class="directions-list">
                 {% for waypoint in route.waypoints %}
@@ -89,37 +89,48 @@
     
     {% if first_directions %}
         
-        <div class="section">
-            {% if p_and_r %}
+        {% if first_directions.error %}
+            
+            <div class="note"><div class="bubble"><div class="pad-10">
+                {% trans 'An error occurred plotting a route from this arrival point to your first stop.' %}
+            </div></div></div>
+            
+        {% else %}
+            
+            <div class="section">
+                {% if p_and_r %}
+                    <div class="header">
+                        <h2>{% blocktrans with p_and_r.start.title as start and p_and_r.closest_stop.title as end %}Park &amp; Ride from {{ start }} to {{ end }}{% endblocktrans %}</h2>
+                    </div>
+                    <div class="section-content no-round-bottom">
+                        <p>{% blocktrans count p_and_r.routes|length as num_routes with p_and_r.routes|join:', ' as route_numbers and p_and_r.start.title as start and p_and_r.origin_stop.entity.title as origin_stop %}At {{ start }} take service {{ route_numbers }} from {{ origin_stop }}.{% plural %}At {{ start }} take any of services {{ route_numbers }} from stop {{ origin_stop }}.{% endblocktrans %}
+                        <p>{% blocktrans with p_and_r.closest_stop.title as end %}When the service reaches {{ end }}, disembark and continue by foot using the directions below.{% endblocktrans %}</p>
+                    </div>
+                {% endif %}
                 <div class="header">
-                    <h2>{% blocktrans with p_and_r.start.title as start and p_and_r.closest_stop.title as end %}Park &amp; Ride from {{ start }} to {{ end }}{% endblocktrans %}</h2>
+                    <h2>{% blocktrans with directions_end.title as dest_title and directions_start.title as origin_title %}Directions to {{ dest_title }} from {{ origin_title }}{% endblocktrans %}</h2>
                 </div>
                 <div class="section-content no-round-bottom">
-                    <p>{% blocktrans count p_and_r.routes|length as num_routes with p_and_r.routes|join:', ' as route_numbers and p_and_r.start.title as start and p_and_r.closest_stop.title as end %}At {{ start }} take service {{ route_numbers }} to {{ end }}.{% plural %}At {{ start }} take any of services {{ route_numbers }} to {{ end }}.{% endblocktrans %}
+                    {% render_map directions_map %}
+                    <div class="note"><div class="bubble"><div class="pad-10">
+                        {% blocktrans with first_directions.total_time|humanise_seconds as time and first_directions.total_distance|humanise_distance as distance %}This route will take {{ time }} and cover {{ distance }}.{% endblocktrans %}
+                    </div></div></div>
                 </div>
-            {% endif %}
-            <div class="header">
-                <h2>{% blocktrans with directions_end.title as dest_title and directions_start.title as origin_title %}Directions to {{ dest_title }} from {{ origin_title }}{% endblocktrans %}</h2>
+                <ol class="directions-list">
+                    {% for waypoint in first_directions.waypoints %}
+                    <li class="direction-{{ waypoint.waypoint_type }}">
+                        {{ waypoint.instruction }}<br />
+                        <span class="additional">{{ waypoint.additional }}</span>
+                    </li>
+                    {% endfor %}
+                </ol>
             </div>
-            <div class="section-content no-round-bottom">
-                {% render_map directions_map %}
-		<div class="note"><div class="bubble"><div class="pad-10">
-                    {% blocktrans with first_directions.total_time|humanise_seconds as time and first_directions.total_distance|humanise_distance as distance %}This route will take {{ time }} and cover {{ distance }}.{% endblocktrans %}
-		</div></div></div>
-            </div>
-            <ol class="directions-list">
-                {% for waypoint in first_directions.waypoints %}
-                <li class="direction-{{ waypoint.waypoint_type }}">
-                    {{ waypoint.instruction }}<br />
-                    <span class="additional">{{ waypoint.additional }}</span>
-                </li>
-                {% endfor %}
-            </ol>
-        </div>
-        
-        <div class="note"><div class="bubble"><div class="pad-10">
-            {% trans 'Please note that the route information provided should be followed at your own risk.' %}
-        </div></div></div>
+            
+            <div class="note"><div class="bubble"><div class="pad-10">
+                {% trans 'Please note that the route information provided should be followed at your own risk.' %}
+            </div></div></div>
+            
+        {% endif %}
     
     {% endif %}
 
