Allow for routes to be cached

--- a/molly/apps/tours/templates/tours/paper.html
+++ b/molly/apps/tours/templates/tours/paper.html
@@ -52,6 +52,8 @@
     {% endfor %}
     
     <p>{% trans 'Please note that the route information provided should be followed at your own risk.' %}</p>
-    
+    {% url maps:osm-about as about_link %}
+    <p>{% blocktrans %}Maps &copy; <a href="{{ about_link }}">OpenStreetMap</a> and contributors, CC-BY-SA{% endblocktrans %}</p>
+ 
 </body>
 </html>
