--- a/molly/apps/tours/templates/tours/create_desktop.html
+++ b/molly/apps/tours/templates/tours/create_desktop.html
@@ -35,7 +35,7 @@
                 </a></li>
             {% endfor %}
         </ol>
-        <form action="{% url tours:create %}{% for e in entities %}{{ e.identifier_scheme }}:{{ e.identifier_value }}/{% endfor %}save/">
+        <form id="poi-submit" action="{% url tours:create %}{% for e in entities %}{{ e.identifier_scheme }}:{{ e.identifier_value }}/{% endfor %}save/">
             <input type="submit" value="{% trans 'Save' %}" />
         </form>
     </div>
